Summary: Project structure and naming
Deets:
 - Flattened Angular app struxture a bit.
 - Renamed angular app prefix to "txpn"
 - Enabled quick static file build with "ng build --app=django"
 - Serving the app from django in dev mode works.

--- a/txpn/src/app/worlds/worlds.component.html
+++ b/txpn/src/app/worlds/worlds.component.html
@@ -16,5 +16,5 @@
     </li>
   </ul>  
 
-  <txtp-world-detail [world]="selectedWorld"></txtp-world-detail>
+  <txpn-world-detail [world]="selectedWorld"></txpn-world-detail>
 </div>
