--- a/txpn/src/app/app.component.html
+++ b/txpn/src/app/app.component.html
@@ -7,8 +7,14 @@
     </h1>
   </div>
 
-  <a routerLink="/adventurers">Adventurer</a>
-  <router-outlet></router-outlet>
-  <a routerLink="/worlds">Worlds</a>
+  <div class="grid-container">
+    <div class="grid-10">
+      <a routerLink="/adventurer-list">Adventure</a>  
+    </div>
+    <div class="grid-10">
+      <a routerLink="/world-list">Explore</a>
+    </div>
+      <a routerLink="/adventurer-list">Adventure</a>  
+  </div>
   <router-outlet></router-outlet>
 </div>
