--- a/src/app/adventurer/adventurer-list.component.html
+++ b/src/app/adventurer/adventurer-list.component.html
@@ -1,11 +1,5 @@
-<div class="adventurer section">
-  <h2>Create your Adventurer</h2>
-  <div class="input-text">
-    <label for="idAdventurer"></label>
-    <input id="idAdventurer"
-           [(ngModel)]="adventurer.name"
-           placeholder="Adven Von Turer">        
-  </div>
+<p>
+  adventurer-list works!
+</p>
 
-  <button (click)="onSelectAdventurer(adventurer)">Done</button>
-</div>
+<txpn-adventurer-detail></txpn-adventurer-detail>
