--- a/txpn/src/app/app.component.html
+++ b/txpn/src/app/app.component.html
@@ -7,7 +7,7 @@
     </h1>
   </div>
   
-  <div class="nav-bar">
+  <nav class="nav-bar">
     <div class="nav-item">
       <a routerLink="/adventure">Adventure</a>  
     </div>
@@ -20,6 +20,6 @@
     <div class="nav-item">
       <a routerLink="/adventurer-list">Log in</a>  
     </div>
-  </div>
+  </nav>
   <router-outlet></router-outlet>
 </div>
