--- a/src/app/adventurer/adventurer-detail.component.html
+++ b/src/app/adventurer/adventurer-detail.component.html
@@ -1,4 +1,5 @@
-<div class="adventurer section">
+<div class="adventurer section"
+     *ngIf="adventurer">
   <h2>Create your Adventurer</h2>
   <div class="input-text">
     <label for="idAdventurer"></label>
