--- a/txpn/src/txpn/styles/_variables.scss
+++ b/txpn/src/txpn/styles/_variables.scss
@@ -7,7 +7,11 @@ $green-black: rgb(10, 28, 15);
 $blue: rgb(180, 180, 245);
 $red: rgb(245, 180, 180);
 $purple: rgb(245, 180, 245);
-$grey: rgb(80, 80, 80);
+
+$grey: rgb(180, 180, 180);
+$grey-dark: rgb(90, 90, 90);
+$grey-darker: rgb(60, 60, 60);
+
 // Font
 $font-family: monospace;
 $font-size: 1.1rem;
