--- a/src/txpn/styles/main.scss
+++ b/src/txpn/styles/main.scss
@@ -1,167 +1,23 @@
-@import "node_modules/unsemantic/grid";
-@import "./variables";
+@import 'vendors/unsemantic';
 
-html {
-  // Chrome workaround: if the font family is not defined
-  // in the root element, scaling in the body elements
-  // becomes inconsistent.
-  font-family: $font-family;
-}
+@import
+  'abstracts/variables',
+  'abstracts/mixins'
+;
 
-body {
-  font: $font-settings;
-  color: $green;
-  background: black;
-}
+@import
+  'base/base',
+  'base/typography'
+;
 
-@mixin text-normalize {
-  background: none;
-  font: $font-settings;
-  border: none;
-  border-bottom: 1px solid;
-  color: $green;
-}
+@import
+  'components/console',
+  'components/step-list'
+;
 
-@mixin border-old-school {
-  border: inset $grey .15rem;
-  border-radius: .2rem;
-}
-
-a {
-  color: $green;
-
-  &:hover {
-    color: rgba($green-dark, .9);
-  }
-  &.active {
-    color: $green-dark;
-  }
-}
-
-input, button {
-  @include text-normalize;
-}
-
-.form-control__button {
-  @include border-old-school;
-  background: $grey-dark;
-
-  &:active {
-    background: $grey-darker;
-  }
-}
-
-.form-field__input {
-  border: none;
-
-  &--submerged {
-    @include border-old-school;
-    background: $grey-darker;
-  }
-}
-.form-field__label {
-  padding-right: 1rem;
-
-  &--prompt::after {
-    padding-left: 1rem;
-    padding-right: .2rem;
-    content: ">>";
-  }
-}
-
-.screen {
-  // font: $font-settings;
-  // color: $green;
-  background: $green-black;
-  /* in order: x offset, y offset, blur size, spread size, color */
-  box-shadow:
-    -5px -3px 40px 6px $green,
-    -5px -3px 40px 20px rgba($green-dark, .8)
-  ;
-  border: double;
-  border-radius: 1.2rem;
-  padding: 2rem;
-  margin: 2rem;
-}
-
-.app-header {
-  a {
-    text-decoration: none;
-  }
-}
-
-.nav-bar {
-  @extend .grid-container;
-
-  .nav-item {
-    @extend .grid-20;
-    @extend .tablet-grid-25;
-    @extend .mobile-grid-50;
-
-    padding-bottom: 5px;
-    text-align: center;
-  }
-}
-
-.console {
-  word-break: all;
-}
-
-.console__history {
-  height: 10rem;
-  max-height: 50rem;
-  resize: vertical;
-  overflow-y: scroll;
-
-  ul, ol {
-    @extend .grid-parent;
-    @extend .list--style-none;
-  }
-}
-
-.list--style-none {
-  list-style: none;
-}
-
-.console__command-line {
-  input {
-    width: 90%;
-  }
-}
-
-.command {}
-
-.section {
-  border-radius: .8rem;
-  padding: .2rem .5rem;
-  margin: .2rem;
-}
-
-.title {
-  text-align: center;
-}
-
-.adventurer {
-  /*background: #ABD;*/
-}
-
-.worlds {
-  /*background: #DBA;*/
-}
-
-.worlds li .selected {
-  /*background: #DBD;*/
-}
-
-.step-list__step {
-  font-style: italic;
-
-  &--active {
-    font-weight: bold;
-    font-style: normal;
-  }
-  &--done {
-    font-style: normal;
-    text-decoration: line-through;
-  }
-}
+@import
+  'layout/app-header',
+  'layout/forms',
+  'layout/navigation',
+  'layout/screen'
+;
