Cleaner input style classes.

--- a/src/txpn/styles/base/_base.scss
+++ b/src/txpn/styles/base/_base.scss
@@ -17,3 +17,15 @@ a {
 input, button {
   @include text-normalize;
 }
+
+.input {
+  @include border-old-school;
+}
+
+.button {
+  @include border-old-school;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
