--- a/txpn/src/txpn/styles/main.scss
+++ b/txpn/src/txpn/styles/main.scss
@@ -2,22 +2,18 @@
 
 @import
   'abstracts/variables',
-  'abstracts/mixins'
-;
+  'abstracts/mixins';
 
 @import
   'base/base',
-  'base/typography'
-;
+  'base/typography';
 
 @import
   'components/console',
-  'components/step-list'
-;
+  'components/step-list';
 
 @import
   'layout/app-header',
   'layout/forms',
   'layout/navigation',
-  'layout/screen'
-;
+  'layout/screen';
