Made AdventureStat a model so that it can be saved!

--- a/src/txpn/styles/abstracts/_mixins.scss
+++ b/src/txpn/styles/abstracts/_mixins.scss
@@ -10,7 +10,7 @@
   color: $green;
 }
 
-@mixin border-old-school {
-  border: inset $grey .15rem;
+@mixin border-old-school($color: $grey) {
+  border: inset $color .15rem;
   border-radius: .2rem;
 }
