Added some content and made the room state update correctly if awkwardly.

--- a/src/txpn/styles/main.scss
+++ b/src/txpn/styles/main.scss
@@ -2,18 +2,23 @@
 
 @import
   'abstracts/variables',
-  'abstracts/mixins';
+  'abstracts/mixins'
+;
 
 @import
   'base/base',
-  'base/typography';
+  'base/typography'
+;
 
 @import
   'components/console',
-  'components/step-list';
+  'components/step-list',
+  'components/room'
+;
 
 @import
   'layout/app-header',
   'layout/forms',
   'layout/navigation',
-  'layout/screen';
+  'layout/screen'
+;
