Form validation JS and CSS.

--- a/src/txpn/styles/abstracts/_variables.scss
+++ b/src/txpn/styles/abstracts/_variables.scss
@@ -15,4 +15,8 @@ $grey-darker: rgb(60, 60, 60);
 // Font
 $font-family: monospace;
 $font-size: 1.1rem;
+$font-size-small: .9rem;
+$font-size-smallest: .7rem;
+$font-size-large: 1.3rem;
+$font-size-largest: 1.5rem;
 $font-settings: $font-size $font-family;
