Adventure component organization and styling.

--- a/src/txpn/styles/main.scss
+++ b/src/txpn/styles/main.scss
@@ -11,9 +11,11 @@
 ;
 
 @import
+  'components/adventure-overview',
   'components/console',
-  'components/step-list',
-  'components/room'
+  'components/dl-unstyled',
+  'components/room',
+  'components/step-list'
 ;
 
 @import
