--- a/src/txpn/styles/main.scss
+++ b/src/txpn/styles/main.scss
@@ -14,6 +14,7 @@
   'components/adventure-overview',
   'components/console',
   'components/dl-unstyled',
+  'components/list-unstyled',
   'components/room',
   'components/step-list'
 ;
